Collection API Улучшения [#214963]